SOFTWARE_FACTORY/infra-gitops/apps/por1/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: por1
  namespace: prod
  labels:
    app: por1
spec:
  selector:
    app: por1
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
