SOFTWARE_FACTORY/infra-gitops/apps/por1/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: por1
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - por1.futurefarms.mx
      secretName: por1-tls
  rules:
    - host: por1.futurefarms.mx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: por1
                port:
                  number: 80
